--- a/Projeto/Control/Control.csproj
+++ b/Projeto/Control/Control.csproj
@@ -39,6 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComentarioController.cs" />
+    <Compile Include="CapituloController.cs" />
+    <Compile Include="FavoritoController.cs" />
+    <Compile Include="HistoriaController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioController.cs" />
   </ItemGroup>
